<resources>
    <string name="app_name">Minecraft</string>
    <string name="checking_updates">Checking for updates...</string>
    <string name="starting_minecraft">Starting Minecraft...</string>
    <string name="injecting">Injecting...</string>
    <string name="cancel">Cancel</string>
    <string name="new_update_available">A new launcher update is available! Tap for more information.</string>
    <string name="install">Install</string>
    <string name="changelog">Changelog</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="select_theme">Select theme</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="ok">OK</string>
    <string name="black_background">Black background in dark mode</string>
    <string name="disable_custom_style">Disable custom style</string>
    <string name="change_app_name">Change application name</string>
    <string name="file_manager">File Manager</string>
    <string name="hide_original_app">Hide/Show original Minecraft Trial</string>
    <string name="gameplay">Gameplay</string>
    <string name="auto_start">Auto-start</string>
    <string name="auto_start_desc">Automatically start Minecraft after loading</string>
    <string name="minecraft_not_found_title">Minecraft cannot be used.</string>
    <string name="minecraft_not_found_desc">Minecraft Trial was not found.\nThe trial version of the game is required.</string>
    <string name="recommend_hide">We recommend hiding the original application. Do you want to do it now?</string>
    <string name="dont_show_again">Don\'t show again</string>
</resources>
